Fix `code` to wrap long lines

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -124,7 +124,7 @@ ol ol ol {
 }
 code {
     display: inline-block;
-    white-space: pre;
+    white-space: pre-wrap;
     word-wrap: normal;
     overflow-wrap: normal;
     padding: 0.3em;
